# criptenv

./: .dockerignore  .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PRD.md  README.md  ROADMAP.md  cookies.txt  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.yml
.claude/: test-user-credentials.md
.github/: dependabot.yml
.playwright-mcp/: page-2026-04-29T22-13-10-799Z.yml  page-2026-04-29T22-13-20-245Z.yml  page-2026-04-29T22-14-59-361Z.yml  page-2026-04-29T22-15-24-970Z.yml  page-2026-04-29T22-23-39-169Z.yml  page-2026-04-29T22-24-27-686Z.yml  page-2026-04-30T01-34-01-510Z.yml  page-2026-04-30T01-39-18-592Z.yml  page-2026-05-05T18-47-06-689Z.yml  page-2026-05-05T18-47-47-515Z.yml  page-2026-05-05T18-48-08-856Z.yml  page-2026-05-05T18-48-40-034Z.yml  page-2026-05-05T18-49-20-090Z.yml
.serena/: project.yml
apps/cli/: README.md  pyproject.toml
apps/cli/src/criptenv/: __init__.py  cli.py  config.py  context.py  remote_vault.py  session.py
apps/cli/src/criptenv/api/: __init__.py  auth.py  client.py  vault.py
apps/cli/src/criptenv/commands/: __init__.py  api_keys.py  audit.py  auth.py  ci.py  completion.py  doctor.py  environments.py  import_export.py  init.py  integrations.py  invites.py  login.py  members.py  projects.py  secrets.py  sessions.py  status.py  sync.py  use.py
apps/cli/src/criptenv/crypto/: __init__.py  core.py  keys.py  utils.py
apps/cli/src/criptenv/vault/: __init__.py  database.py  models.py  queries.py
apps/cli/tests/: __init__.py  conftest.py  test_api_client.py  test_commands.py  test_config.py  test_crypto.py  test_import_export.py  test_integrations_commands.py  test_remote_vault.py  test_rotation_commands.py  test_secrets_flow.py  test_session_context.py  test_sync_commands.py  test_team_commands.py  test_vault.py
discovery/: README.md
docs/: index.md
guidelines/: README.md
plans/: api-web-cli-alignment-plan.md  cli-modernization-review.md  criptenv-docs-page.md  hell-tdd-m3-4-m3-5.md  hell-tdd-m3-5-6-m3-6.md  hell-tdd-m3-5-continuation.md  mobile-notifications-bulk-secrets-plan.md  oauth-implementation-spec.md  phase1-cli-implementation.md  phase1.5-cli-integration.md  phase3-cicd-integrations.md
prd/: README.md
roadmap/: README.md
scripts/: db_migrate.sh  deploy.sh  docker.sh  init_production_db.py  production-checklist.sh  (+1 more)
(+466 files in other folders)
