[project]
name = "criptenv"
version = "0.1.0"
description = "Zero-Knowledge secret management CLI"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "cryptography>=42.0.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
criptenv = "criptenv.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/criptenv"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
